src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items_C</relationshipLabel>
        <relationshipName>Contact_Score_Items_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Has_Moved__c</fullName>
        <description>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</description>
        <inlineHelpText>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
        <defaultValue>&apos;Not Compared&apos;</defaultValue>
        <label>ZoomInfo Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email address for the Contact record.</description>
        <inlineHelpText>ZoomInfo Email address for the Contact record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
        <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
        <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
        <label>ZoomInfo Last Clean Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Contact record.</description>
        <inlineHelpText>ZoomInfo Phone for the Contact record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Zoom_Clean_Status__c</fullName>
        <label>ZoomInfo Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Compared</fullName>
                    <color>#AFCADF</color>
                    <default>true</default>
                    <label>Not Compared</label>
                </value>
                <value>
                    <fullName>Different</fullName>
                    <color>#F3D904</color>
                    <label>Different</label>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                    <color>#78C953</color>
                    <label>In Sync</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#EFAE73</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Clean</fullName>
                    <color>#009900</color>
                    <label>Clean</label>
                </value>
                <value>
                    <fullName>Company Clean Only</fullName>
                    <color>#33CC00</color>
                    <label>Company Clean Only</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#FF0000</color>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
            <operation>equals</operation>
            <value>GA</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL_OPT_OUT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Heather</value>
        </filters>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>10/19/2020</value>
        </filters>
        <label>HEW Georgia Contacts_Prospects</label>
    </listViews>
    <listViews>
        <fullName>All_CSM_Client_Newsletter_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All (CSM) Client Newsletter Contacts</label>
        <sharedTo>
            <role>Client_Strategy</role>
            <role>Client_Strategy_Leadership</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Client_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type_From_Account__c</columns>
        <columns>Account_Type_From_Account__c</columns>
        <columns>CSM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>client</value>
        </filters>
        <label>All Client Contacts</label>
        <sharedTo>
            <role>Client_Strategy</role>
            <role>Client_Strategy_Leadership</role>
            <role>Commercial_Employer_Sales_Team_Admin</role>
            <role>Commercial_Employer_Sales_Team_Zone_Mgr_NE</role>
            <role>Commercial_Employer_Sales_Team_Zone_Mgr_SE</role>
            <role>Commercial_Employer_Sales_Team_Zone_Mgr_W</role>
            <role>Commercial_Federal_Government_Sales_Admin</role>
            <role>Commercial_Hospital_System_Sales_Admin</role>
            <role>Commercial_Marketing_Team</role>
            <role>Commercial_Sales_Team_Admin</role>
            <role>Sales_Admin</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Client_Contacts_without_assigned_CSM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>client</value>
        </filters>
        <filters>
            <field>CSM_ID_From_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Type_From_Account__c</field>
            <operation>notContain</operation>
            <value>payer/aso</value>
        </filters>
        <label>All Client Contacts without assigned CSM</label>
        <sharedTo>
            <role>Client_Strategy</role>
            <role>Client_Strategy_Leadership</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CLIENT_SUCCESS_SIGNUM_Client_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type_From_Account__c</columns>
        <columns>Account_Type_From_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>client</value>
        </filters>
        <label>CLIENT SUCCESS: SIGNUM Client Contacts</label>
        <sharedTo>
            <role>Client_Strategy</role>
            <role>Client_Strategy_Leadership</role>
            <role>Commercial_Marketing_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMO_list</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Grouping__c</field>
            <operation>equals</operation>
            <value>Dr Bimal&apos;s CMO list</value>
        </filters>
        <label>CMO list</label>
    </listViews>
    <listViews>
        <fullName>COMMERCIAL_PARTNERS_My_Signum_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type_From_Account__c</columns>
        <columns>Account_Type_From_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_Equals_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Open_Opp_Count_From_Acct__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>notEqual</operation>
            <value>client,disqualified</value>
        </filters>
        <label>COMMERCIAL PARTNERS_My Signum Prospects</label>
        <sharedTo>
            <role>Commercial_Marketing_Team</role>
            <role>Commercial_Partner_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>COMMERCIAL_SALES_My_Signum_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type_From_Account__c</columns>
        <columns>Account_Type_From_Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_Equals_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Open_Opp_Count_From_Acct__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>notEqual</operation>
            <value>client,disqualified</value>
        </filters>
        <label>COMMERCIAL SALES_My Signum Prospects</label>
    </listViews>
    <listViews>
        <fullName>Clients_Checkbox_for_Opt_Out</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Owner_From_Account__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Opt_out_of_commercial_marketing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>client</value>
        </filters>
        <label>Clients - Checkbox for Opt Out</label>
    </listViews>
    <listViews>
        <fullName>Current_Client_Contacts</fullName>
        <columns>Account_State__c</columns>
        <columns>CSM__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>client</value>
        </filters>
        <label>Current Client Contacts</label>
    </listViews>
    <listViews>
        <fullName>Current_Client_Contacts_HSS</fullName>
        <columns>Account_State__c</columns>
        <columns>CSM__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>client</value>
        </filters>
        <filters>
            <field>Type_From_Account__c</field>
            <operation>equals</operation>
            <value>Payer/ASO</value>
        </filters>
        <label>Current Client Contacts_HSS</label>
    </listViews>
    <listViews>
        <fullName>Daniel_Contact_View</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 6 AND 7 AND (4 OR 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Owner_From_Account__c</columns>
        <columns>Employees_From_Account__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open_Opp_Count_From_Acct__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Owner_From_Account__c</field>
            <operation>equals</operation>
            <value>Max Bernstein,Aaryn Pure,Jason Macaleer,Stacie Platt,Rob Sherry,Cindy Pileski</value>
        </filters>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>prospect</value>
        </filters>
        <filters>
            <field>Last_Task_Event_by_Livongo_Rep_From_Acct__c</field>
            <operation>lessOrEqual</operation>
            <value>N_DAYS_AGO:30</value>
        </filters>
        <filters>
            <field>Last_Task_Event_by_Livongo_Rep_From_Acct__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Parent_Account_From_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Exclude_from_Inside_Sales_From_Account__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Daniel Contact View</label>
        <sharedTo>
            <role>Inside_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dylan_Contact_View</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 6 AND 7 AND (4 OR 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Owner_From_Account__c</columns>
        <columns>Employees_From_Account__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open_Opp_Count_From_Acct__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Owner_From_Account__c</field>
            <operation>equals</operation>
            <value>Rob Brooks,Craig Root,Chris Cole,Kami Findley,Matt Lenz</value>
        </filters>
        <filters>
            <field>Account_Type_From_Account__c</field>
            <operation>contains</operation>
            <value>prospect</value>
        </filters>
        <filters>
            <field>Last_Task_Event_by_Livongo_Rep_From_Acct__c</field>
            <operation>lessOrEqual</operation>
            <value>N_DAYS_AGO:30</value>
        </filters>
        <filters>
            <field>Last_Task_Event_by_Livongo_Rep_From_Acct__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Parent_Account_From_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Exclude_from_Inside_Sales_From_Account__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Dylan Contact View</label>
        <sharedTo>
            <role>Inside_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Opt_Outs</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.EMAIL_OPT_OUT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Email_Opt_Outs</label>
    </listViews>
    <listViews>
        <fullName>FEP_Ah_hoc_outreach</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>FEP Ah-hoc outreach</label>
    </listViews>
    <recordTypes>
        <fullName>CS_Contact</fullName>
        <active>true</active>
        <description>A Client Strategy contact who was not involved pre-sale, but gets involved post-sale</description>
        <label>CS Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <label>Internal Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Contact</fullName>
        <active>true</active>
        <description>A Sales Contact would be associated with the Sales Application and would ideally be handled by users of &apos;Sales Team&apos;. A Sales Contact would be associated to a Sales Account.</description>
        <label>Sales Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>A1c_Values</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; 
((ISPICKVAL(a1cstatus__c, &apos;Yes&apos;) &amp;&amp; ISBLANK(TEXT( A1CTest__c ))) || (NOT(ISPICKVAL(a1cstatus__c, &apos;Yes&apos;)) &amp;&amp; NOT(ISBLANK(TEXT( A1CTest__c )))))</errorConditionFormula>
        <errorMessage>Enter the A1c test value as per the status selected. Leave blank if not &apos;Yes&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_be_edited_only_for_HUMANA</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Assigned__c ) &amp;&amp; 
 Assigned__c == TRUE &amp;&amp; 
 PromoCode__c != $Label.Humana_Promo_code &amp;&amp; 
 $Profile.Name != &apos;Integration User Profile&apos;</errorConditionFormula>
        <errorMessage>Cannot Edit this field if Promo-Code is not Humana Study</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Biggest_DM_Challenge</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (! ISPICKVAL( Biggest_DM_challenge__c  , &apos;Other&apos;) &amp;&amp; !IsBlank(  OtherBiggestDMchallenge__c  ) &amp;&amp; RecordType.Name == &apos;Member&apos;)</errorConditionFormula>
        <errorMessage>Other Biggest DM challenge should be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CDE_cannot_be_child_of_Client_SubClient</fullName>
        <active>false</active>
        <description>External CDE cannot be a child of Client / Sub-Client</description>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (RecordType.Name== &apos;External CDE&apos; &amp;&amp;  (Account_Relationship__r.RecordType.Name == &apos;SubClient Organization&apos; || Account_Relationship__r.RecordType.Name == &apos;Client Organization&apos;))</errorConditionFormula>
        <errorMessage>External CDE cannot be a child of Client / Sub-Client</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_CGM</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (
ISCHANGED( cgm__c  ) &amp;&amp; ISPickVal( cgm__c , &quot;Unknown&quot;) &amp;&amp;    ( ISPICKVAL( PRIORVALUE(cgm__c ) , &quot;Yes&quot;) || ISPICKVAL( PRIORVALUE(cgm__c ) , &quot;No&quot;)))</errorConditionFormula>
        <errorMessage>Cannot change it to Unknown from Yes / No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_GLP</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; ( 
ISCHANGED( GLP1inhibitorsuse__c    ) &amp;&amp; ISPickVal( GLP1inhibitorsuse__c    , &quot;Unknown&quot;) &amp;&amp; ( ISPICKVAL( PRIORVALUE(GLP1inhibitorsuse__c    ) , &quot;Yes&quot;) || ISPICKVAL( PRIORVALUE(GLP1inhibitorsuse__c    ) , &quot;No&quot;)))</errorConditionFormula>
        <errorMessage>Cannot change it to Unknown from Yes / No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_Language</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (ISCHANGED( AreyouofspanishhispanicorLatino__c  ) &amp;&amp; ISPickVal( AreyouofspanishhispanicorLatino__c  , &quot;Unknown&quot;) &amp;&amp; ( ISPICKVAL( PRIORVALUE(AreyouofspanishhispanicorLatino__c  ) , &quot;Yes&quot;) || ISPICKVAL( PRIORVALUE(AreyouofspanishhispanicorLatino__c  ) , &quot;No&quot;)))</errorConditionFormula>
        <errorMessage>Cannot change it to Unknown from Yes / No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_Oral_Medications</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (ISCHANGED( oralDiabetesMeds__c   ) &amp;&amp; ISPickVal( oralDiabetesMeds__c   , &quot;Unknown&quot;) &amp;&amp; ( ISPICKVAL( PRIORVALUE(oralDiabetesMeds__c   ) , &quot;Yes&quot;) || ISPICKVAL( PRIORVALUE(oralDiabetesMeds__c   ) , &quot;No&quot;)))</errorConditionFormula>
        <errorMessage>Cannot change it to Unknown from Yes / No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_insulin_pump</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (ISCHANGED( insulinPump__c ) &amp;&amp; ISPickVal( insulinPump__c , &quot;Unknown&quot;) &amp;&amp; ( ISPICKVAL( PRIORVALUE(insulinPump__c ) , &quot;Yes&quot;) || ISPICKVAL( PRIORVALUE(insulinPump__c ) , &quot;No&quot;)))</errorConditionFormula>
        <errorMessage>Cannot change it to Unknown from Yes / No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_otherMedication</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (ISCHANGED( otherMedication__c     ) &amp;&amp; ISPickVal( otherMedication__c     , &quot;Unknown&quot;) &amp;&amp; ( ISPICKVAL( PRIORVALUE(otherMedication__c     ) , &quot;Yes&quot;) || ISPICKVAL( PRIORVALUE(otherMedication__c     ) , &quot;No&quot;)))</errorConditionFormula>
        <errorMessage>Cannot change it to Unknown from Yes / No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstName_NoSpecialChar</fullName>
        <active>true</active>
        <description>First Name field cannot contain any special characters except apostrophes.</description>
        <errorConditionFormula>NOT(REGEX( FirstName,&quot;^[a-z A-Z&apos;]*$&quot;))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name field cannot contain any special characters except apostrophes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_cannot_be_empty</fullName>
        <active>false</active>
        <description>Members first name cannot be empty.</description>
        <errorConditionFormula>RecordType.Name = &apos;Member&apos;  &amp;&amp;  ISBlank(FirstName )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Learning_Preference_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (! ISPICKVAL(Learningpreference__c , &apos;Other&apos;) &amp;&amp; !IsBlank(   Other_learning_preference__c ) &amp;&amp; RecordType.Name == &apos;Member&apos;)</errorConditionFormula>
        <errorMessage>Other learning preference should be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MailingStreet</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (NOT( ISBLANK(MailingStreet))  &amp;&amp;  LEN(MailingStreet)&gt; 70)</errorConditionFormula>
        <errorMessage>Mailing street length should not exceed 70</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Street_Rule</fullName>
        <active>false</active>
        <description>Mailing street shouldn&apos;t contain PO</description>
        <errorConditionFormula>AND(($Profile.Name != &apos;Integration User Profile&apos;),OR(CONTAINS( UPPER(MailingStreet) , &apos;PO&apos;),CONTAINS( UPPER(MailingStreet) , &apos;POST&apos;) ))</errorConditionFormula>
        <errorMessage>Mailing street should not include PO boxes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandating_Contact_Preference_at_night</fullName>
        <active>false</active>
        <description>If Night start and end times are set, make Contact Preference at night mandatory</description>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (AND(
NOT(ISPICKVAL(StartBlTime__c,&apos;&apos;)),
ISPICKVAL(OptIntoNightAlt__c,&apos;&apos;)
))</errorConditionFormula>
        <errorMessage>Contact preference is mandatory if night time is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandating_Night_Starts_and_Ends_Time</fullName>
        <active>false</active>
        <description>Night starts and ends is mandatory</description>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (AND(Not(ISPICKVAL( OptIntoNightAlt__c ,&apos;&apos;)),OR(ISPICKVAL(StartBlTime__c,&apos;&apos;), 
ISPICKVAL(OptIntoNightAlt__c,&apos;&apos;)) 
))</errorConditionFormula>
        <errorMessage>Night time is mandatory if contact preference is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Member_cannot_be_child_of_Care</fullName>
        <active>false</active>
        <description>Member cannot be a child of Care</description>
        <errorConditionFormula>($Profile.Name != &apos;Integration User Profile&apos;) &amp;&amp; (RecordType.Name== &apos;Member&apos; &amp;&amp;  Account_Relationship__r.RecordType.Name == &apos;Care Organization&apos;)</errorConditionFormula>
        <errorMessage>Member cannot be a child of Care</errorMessage>
    </validationRules>
</CustomObject>